Partial fix for when filenames are too long
Partial fix for when filenames are too long to fit in the boxes in the
SD card listing

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,6 @@ div#layerChart {width:510px; height: 120px}
 button#connect, button#stop, button#pause, button#reset { width:85px }
 div#gFileList, div#gFileList2, div#gFileList3 {vertical-align: middle}
 
-.file-button{width:100%;height:28px;border:1px solid;border-radius:5px;border-color:#C0C0C0;padding:3px 3px 3px 3px;margin-top:1px;cursor:pointer}
+.file-button{width:100%;border:1px solid;border-radius:5px;border-color:#C0C0C0;padding:3px 3px 3px 3px;margin-top:1px;cursor:pointer}
 .file-red{color:#fff !important;background-color:#d9534f !important;border-color:#d43f3a !important}
 .file-grey{color:#333;background-color:#ebebeb;border-color:#adadad}
